# think-then-act

./: .gitignore  README.md  analyze_seeds.py  compare_runs.py  env_utils.py  eval.py  generate_sft_data.py  modal_config.py  obs_wrapper.py  policy.py  pyproject.toml  reward.py  run_episode.py  run_harness.py  run_policy.py  run_reward.py  run_train.py  run_train_m6.py  seed_analysis  sft_train.py  trainer.py  verify_mujoco.py  visual_test.py
legacy/scripts/: eval.py  generate_sft_data.py  run_episode.py  run_train_m6.py  sft_train.py  train_low_level.py
scripts/: analyze_seeds.py  collect_pose_data.py  eval.py  eval_pose_model_impact.py  generate_sft_data.py  generate_subgoal_sft_data.py  measure_lift_height.py  record_full_rollout.py  record_subgoal_demo.py  record_subgoal_video.py  run_episode.py  run_train_m6.py  sft_train.py  subgoal_sft_train.py  train_low_level.py  train_low_level_ppo.py  train_pose_estimator.py  validate_pose_predictor.py  verify_close_gripper_grasp.py
scripts/milestones/: run_harness.py  run_policy.py  run_reward.py  run_train.py
src/think_then_act/: modal_app.py
tests/: run_integration.py
tests/integration/: conftest.py  test_env_rollout.py  test_model_loader.py  test_subgoal_env.py
tests/unit/: test_block_pose_predictor.py  test_collision_predictor.py  test_compare_runs.py  test_dense_reward.py  test_fetch_skills.py  test_low_level_grpo.py  test_low_level_ppo.py  test_sample_descent_biased_action.py  test_skill_env.py  test_subgoal_features.py  test_subgoal_labeler.py  test_subgoal_policy.py  test_subgoal_reward.py  (+3 more)
(+20 files in other folders)
